service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cautious-enigma
  labels:
    app.kubernetes.io/name: cautious-enigma
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cautious-enigma
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
